--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@ ipython
 openai
 fastapi==0.85.0
 pylint
-click
-pytest
-pytest-cov
+click==8.1.3
+pytest==7.1.3
+pytest-cov==4.0.0
 uvicorn[standard]
-black
-wikipedia
+black==22.8.0
+wikipedia==1.4.0
 ipdb
-git+https://github.com/LIAAD/yake              #keyword extractor
-git+https://github.com/openai/whisper.git      #speech recognition model
+git+https://github.com/LIAAD/yake
+git+https://github.com/openai/whisper.git
